# GL-Playground

./: CMakeLists.txt  README  README.md
Example 1/: main.cpp
Example1/: CMakeLists.txt  main.cpp
Example2/: CMakeLists.txt  main.cpp
common/: model.cpp  shader_util.cpp  vertex.h
common/include/: light.h  model.h  shader_util.h
data/models/: cube.yml
data/shaders/: 1rgba_norm.frag  simple_shader.frag  simple_shader.vert  texture_shader.frag  texture_shader.vert
examples/: CMakeLists.txt
examples/example1/: CMakeLists.txt
examples/example2/: CMakeLists.txt  main.cpp
examples/example3/: CMakeLists.txt  main.cpp
examples/example4/: CMakeLists.txt  main.cpp
shaders/: simple_shader.frag  simple_shader.vert
